MB-41340 correct Button Spacing XDCR
- added style to buttons
- fixed broken markup from an Angular custom HTML element

Reviewed-on: http://review.couchbase.org/c/ns_server/+/136325
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -3428,3 +3428,7 @@ a.supported-browsers-530 {
 }
 .import-raw-panel {
 }
+
+.block {
+  display: block!important;
+}
